# VapourSynth-LGhost

./: README.md  meson.build
LGhost/: LGhost.cpp  LGhost.h  LGhost.vcxproj  LGhost.vcxproj.filters  LGhost_AVX2.cpp  LGhost_AVX512.cpp  LGhost_SSE2.cpp
